@@ -1,3 +1,8 @@
+2015-01-13  Andrew Pinski  <apinski@cavium.com>
+
+	* gcc.target/aarch64/volatileloadpair-1.c: New testcase.
+	* gcc.target/aarch64/volatileloadpair-2.c: New testcase.
+
 2015-01-13  Richard Biener  <rguenther@suse.de>
 
 	PR tree-optimization/64406
